# virtualcan

.github/workflows/: cmake-ubuntu.yml  rust-ubuntu.yml
cpp/virtualcan/: CMakeLists.txt
cpp/virtualcan/cmake/: virtualcanConfig.cmake.in
